# Cube4D

./: README.md  point.py  point_initializers.py  points_draw.py  points_engine.py  pyproject.toml  pyrightconfig.json  run.py  screen_initializers.py  test_gpt1.py  test_numpy.py
Cube3D/: cube3D.py
demo/: video.mov
