[tool.poetry]
name = "cube4d"
version = "0.1.0"
description = ""
authors = ["Andrey Torlopov <torlopov.mail@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
